# Library-Analyzer

./: .gitignore  mkdocs.yml  package-lock.json  package.json  pyproject.toml
.github/: CODEOWNERS  dependabot.yml
aexpy/: aexpy_evaluation_sklearn_0242_121.xlsx  format_cluster.txt  format_ensemble.txt  report_aexpy_cluster.txt  report_aexpy_decomposition.txt  report_aexpy_ensemble.txt  report_aexpy_linear_model.txt  report_aexpy_neural_network.txt  report_scikit-learn@0.24.2&scikit-learn@1.2.1.txt
determine_thresholds/: ground_trouth_cluster.txt  migrate_cluster_all_variable_.txt  migrate_cluster_all_variable_new.txt  scikit-learn_cluster_0_61__0_23.txt
docs/: CHANGELOG.md  README.md
griffe/: griffev0.24.0_1.2.1_0.24.4.txt  report_griffe_cluster.txt  report_griffe_decomposition.txt  report_griffe_ensemble.txt  report_griffe_linear_model.txt  report_griffe_neural_network.txt
library_anaylzer_migration_001_1920/: differences_0_1__0_23.txt  migrate_library_analyzer_100_192.txt  migration_package_parser_evaluation_von_with_0_1_zu_0_23.xlsx  migration_package_parser_evaluation_von_with_0_1_zu_0_23_mappingarten_separat.xlsx  migration_package_parser_evaluation_von_with_0_1_zu_0_23_mappings_separated.xlsx  package-parser__apiv0.0.1.json  package-parser__apiv1.92.0.json
migration_of_mathplotlib/: mathplotlib_evaluation_0_61__0_23_nonpubic - Kopie.xlsx  mathplotlib_evaluation_0_61__0_23_nonpubic_mapping_seperated.xlsx  mathplotlib_evaluation_0_61__0_23_nonpubic_mappings_seperated.xlsx  migrate_mathplotlib_334_360.txt  migrate_mathplotlib_334_360_____0_1.txt
(+472 files in other folders)
