[tool.poetry]
name = "library-analyzer"
version = "0.1.1"
description = "Analysis of Python libraries and code that uses them."
authors = ["Lars Reimann <mail@larsreimann.com>"]
license = "MIT"
readme = "docs/README.md"
repository = "https://github.com/Safe-DS/Library-Analyzer"
documentation = "https://library-analyzer.readthedocs.io"
keywords = ["static-analysis", "library", "client-code"]
packages = [
    { include = "library_analyzer", from = "src"},
]

[tool.poetry.scripts]
analyze-library = "library_analyzer.main:main"

[tool.poetry.dependencies]
python = "^3.10,<3.12"
astroid = "^2.14.2"
black = ">=23.1,<25.0"
levenshtein = ">=0.20.9,<0.25.0"
scipy = "^1.10.1"
spacy = "^3.5.1"
docstring-parser = "^0.15"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.2.1,<9.0.0"
pytest-cov = "^4.0.0"

[tool.poetry.group.docs.dependencies]
jupyter = "^1.0.0"
mkdocs = "^1.4.2"
mkdocstrings = ">=0.20,<0.25"
mkdocstrings-python = ">=0.8.3,<1.9.0"
mkdocs-autorefs = ">=0.4.1,<1.1.0"
mkdocs-exclude = "^1.0.2"
mkdocs-gen-files = ">=0.4,<0.6"
mkdocs-glightbox = "^0.3.1"
mkdocs-jupyter = "^0.24.0"
mkdocs-literate-nav = "^0.6.0"
mkdocs-material = "^9.1.2"
mkdocs-section-index = "^0.3.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
